@@ -107,14 +107,11 @@ def initialize(context):
 
     # Plone content
 
-    # LargePloneFolder is deprectated and will be removed in Plone 5.0.
     # Usage of PloneFolder is discouraged.
-    import PloneFolder, LargePloneFolder
+    import PloneFolder
 
-    contentClasses      = ( PloneFolder.PloneFolder,
-                            LargePloneFolder.LargePloneFolder, )
-    contentConstructors = ( PloneFolder.addPloneFolder,
-                            LargePloneFolder.addLargePloneFolder, )
+    contentClasses      = ( PloneFolder.PloneFolder, )
+    contentConstructors = ( PloneFolder.addPloneFolder, )
 
     # CMFCore and CMFDefault tools
     from Products.CMFCore import CachingPolicyManager
