@@ -1,45 +1,0 @@
-<?xml version="1.0"?>
-<object name="Large Plone Folder"
-   meta_type="Factory-based Type Information with dynamic views"
-   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title" i18n:translate="">Large Folder</property>
- <property name="description"
-      i18n:translate="">A specialized folder for holding a very large number of items. (Normal folders can do this now, this exists for backwards compatibility and upgrade purposes only)</property>
- <property name="icon_expr"></property>
- <property name="content_meta_type">ATBTreeFolder</property>
- <property name="product">ATContentTypes</property>
- <property name="factory">addATBTreeFolder</property>
- <property name="immediate_view">folder_listing</property>
- <property name="global_allow">False</property>
- <property name="filter_content_types">False</property>
- <property name="allowed_content_types"/>
- <property name="allow_discussion">False</property>
- <property name="default_view">folder_listing</property>
- <property name="view_methods">
-  <element value="folder_summary_view"/>
-  <element value="folder_full_view"/>
-  <element value="folder_tabular_view"/>
-  <element value="atct_album_view"/>
-  <element value="folder_listing"/>
- </property>
- <alias from="(Default)" to="(dynamic view)"/>
- <alias from="edit" to="atct_edit"/>
- <alias from="sharing" to="@@sharing"/>
- <alias from="view" to="(selected layout)"/>
- <action title="View" action_id="view" category="object" condition_expr=""
-    url_expr="string:${folder_url}/" visible="True"
-    i18n:attributes="title">
-  <permission value="View"/>
- </action>
- <action title="Edit" action_id="edit" category="object" condition_expr="not:object/@@plone_lock_info/is_locked_for_current_user|python:True"
-    url_expr="string:${object_url}/edit" visible="True"
-    i18n:attributes="title">
-  <permission value="Modify portal content"/>
- </action>
- <action title="Folder Listing" action_id="folderlisting" category="folder"
-    condition_expr="object/isPrincipiaFolderish"
-    url_expr="string:${folder_url}/view" visible="False"
-    i18n:attributes="title">
-  <permission value="View"/>
- </action>
-</object>
